--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script
+      src="https://kit.fontawesome.com/f71ba729e4.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>
